# nexterm

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: security.md
openspec/changes/profile-folder-grouping/: apply-progress.md  design.md  explore.md  proposal.md  tasks.md
openspec/changes/windows-vault-acl-hardening/: apply-progress.md  design.md  tasks.md
openspec/specs/vault-storage-security/: spec.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  profile.rs  state.rs  vault.rs
src-tauri/src/commands/: connection.rs  mod.rs  profile.rs  sftp.rs  terminal.rs  tunnel.rs  vault.rs
src-tauri/src/fs_secure/: fallback.rs  mod.rs  unix.rs  windows.rs
src-tauri/src/ssh/: handler.rs  keys.rs  known_hosts.rs  mod.rs  session.rs  sftp.rs  terminal.rs  tunnel.rs
src/components/layout/: AppLayout.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx
src/components/ui/: Button.tsx  Dialog.tsx  Input.tsx  OnboardingTour.tsx  Select.tsx  Spinner.tsx
src/features/connection/: AuthPrompt.tsx  ConnectionDialog.tsx  HostKeyDialog.tsx  useConnection.ts
src/features/sftp/: FileContextMenu.tsx  FilePane.tsx  FileViewer.tsx  PathBar.tsx  SftpBrowser.tsx  TransferOverlay.tsx  sftp.types.ts  useSftp.ts
src/features/terminal/: TerminalTabs.tsx  TerminalView.tsx  useTerminal.ts
src/features/tunnel/: TunnelForm.tsx  TunnelManager.tsx  TunnelRow.tsx  tunnel.types.ts  useTunnel.ts
src/lib/: constants.ts  folders.ts  tauri.ts  types.ts
src/lib/i18n/: en.ts  es.ts  (+1 more)
src/stores/: profileStore.ts  sessionStore.ts  transferStore.ts  tunnelStore.ts  updateStore.ts
src/styles/: globals.css  terminal.css
(+10 files in other folders)
